Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,8 +251,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = []\n",
-    "my_list.append ( 'Malta' )\n",
+    "countries.append('Malta')\n",
+    "count\n",
     "\n"
    ]
   },
