--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -265,18 +265,18 @@
        " 'Italy',\n",
        " 'Canada',\n",
        " 'South Korea',\n",
+       " 'Malta',\n",
        " 'Malta']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "countries.append('Malta')\n",
-    "countries\n",
-    "\n"
+    "countries\n"
    ]
   },
   {
